# CPP-AssetManager

./: CMakeLists.txt  README.md  material.json
assets/: geometry.json  material.json  shader.json  texture.json
src/: ConfigParser.hpp  ConfigValue.hpp  main.cpp
src/assets/: AssetHandle.hpp  AssetLoader.cpp  AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  Geometry.hpp  Material.hpp  Mesh.hpp  Shader.hpp  Texture.hpp
src/config/: Config.hpp  ConfigParser.hpp  ConfigValue.hpp  Serializable.hpp
src/config/parser/: TextCursor.hpp
